# dft-pipeline

./: .gitignore  AB_TESTING.md  CHANGELOG.md  CHANGELOG_v0.3.1.md  DATABASE_INTEGRATION.md  MICROBATCH_PROCESSING.md  PIPELINE_DEPENDENCIES.md  README.md  dft_pipeline-0.3.11-py3-none-any.whl  pyproject.toml  setup.py
changelogs/: CHANGELOG_v0.3.6.md  CHANGELOG_v0.3.7.md  CHANGELOG_v0.3.8.md
dft/cli/: main.py
dft/cli/commands/: docs.py  init.py  run.py  test.py
dft/core/: config.py  factory.py  pipeline.py  runner.py
dft/endpoints/: clickhouse.py  mysql.py  postgresql.py
dft/processors/: validator.py
dft/sources/: csv.py
docs/: AB_TESTING.md  CUSTOM_COMPONENTS.md  DATABASE_INTEGRATION.md  MICROBATCH_PROCESSING.md
example_project/: .env.example  .gitignore  README.md  dft_project.yml
example_project/data/: experiment_data_ztest.csv  sample_data.csv  test_data.csv
example_project/pipelines/: ab_test_bootstrap.yml  ab_test_cuped.yml  ab_test_ttest.yml  ab_test_ztest.yml  analytics_pipeline.yml  base_data_pipeline.yml  custom_example_pipeline.yml  customer_analysis.yml  daily_revenue.yml  daily_transactions.yml  independent_pipeline.yml  reporting_pipeline.yml  simple_csv_example.yml  test_simple_ab.yml  user_cohorts.yml
examples/: ab_test_pipeline.yml  google_play_etl_pipeline.yml
examples/ab_testing/: README.md
test_proj/: .env.example  .gitignore  dft_project.yml
test_proj/data/: sample.csv
test_proj/dft/: __init__.py
test_proj/pipelines/: custom_example_pipeline.yml  example_pipeline.yml
tests/: test_basic.py  test_simple.py
(+9 files in other folders)
